--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "material-ui": "^0.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-numeric-input": "^2.2.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-sortable-hoc": "^2.0.0",
